@@ -30,6 +30,7 @@
       <applyto>/apps/sound-juicer/path_pattern</applyto>
       <type>string</type>
       <owner>sound-juicer</owner>
+      <default>%aa/%at</default>
       <locale name="C">
         <short>The directory structure for the files</short>
         <long>
@@ -46,6 +47,7 @@
       <applyto>/apps/sound-juicer/file_pattern</applyto>
       <type>string</type>
       <owner>sound-juicer</owner>
+      <default>%tN - %tt</default>
       <locale name="C">
         <short>The name pattern for files</short>
         <long>
